# sora-kaigi

./: .gitignore  Cargo.toml  Kaigi.yml  README.md  gradlew  roadmap.md
.github/workflows/: conformance-matrix.yml  native-ga-readiness.yml
Kaigi.xcodeproj/: project.pbxproj
Kaigi.xcworkspace/: contents.xcworkspacedata
clients/: README.md
clients/android/: README.md  settings.gradle.kts
clients/android/app/: build.gradle.kts  proguard-rules.pro
clients/apple/: README.md
clients/apple/Shared/Model/: MeetingConfig.swift  MeetingProtocolClient.swift  MeetingProtocolReducer.swift  MeetingProtocolTypes.swift  MeetingSession.swift  MeetingSessionPersistence.swift  MeetingTelemetry.swift
clients/apple/Shared/Resources/: LaunchScreen.storyboard
clients/apple/Shared/View/: MeetingDashboardView.swift  WebFallbackView.swift
clients/apple/iOS/: KaigiIOSApp.swift
clients/apple/iPadOS/: KaigiIPadOSApp.swift
clients/apple/macOS/: KaigiMacOSApp.swift
clients/apple/tests-ui/ios/: KaigiIOSUITests.swift
clients/apple/tests-ui/ipados/: KaigiIPadOSUITests.swift
clients/apple/tests-ui/macos/: KaigiMacOSUITests.swift
clients/apple/tests-ui/tvos/: KaigiTVOSUITests.swift
clients/apple/tests-ui/visionos/: KaigiVisionOSUITests.swift
clients/apple/tests-ui/watchos/: KaigiWatchOSUITests.swift
clients/apple/tests/ios/: KaigiIOSTests.swift
clients/apple/tests/ipados/: KaigiIPadOSTests.swift
clients/apple/tests/macos/: KaigiMacOSTests.swift
clients/apple/tvOS/: KaigiTVOSApp.swift  README.md
clients/apple/visionOS/: KaigiVisionOSApp.swift
clients/apple/watchOS/: KaigiWatchOSApp.swift  README.md
clients/ios/: README.md
clients/ipados/: README.md
clients/linux/: README.md
clients/macos/: README.md
clients/visionos/: README.md
clients/web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
clients/web/e2e/: session.ui.e2e.spec.ts
clients/web/src/: App.vue
clients/web/tests/: codec.test.ts  reducer.test.ts  session.smoke.test.ts  useMeetingSession.test.ts
clients/windows/: Kaigi.Windows.sln  README.md
crates/kaigi-cli/: Cargo.toml
crates/kaigi-cli/src/: main.rs
crates/kaigi-hub-echo/: Cargo.toml
crates/kaigi-hub-echo/src/: main.rs
crates/kaigi-linux-client/: Cargo.toml
crates/kaigi-linux-client/src/: lib.rs  main.rs
crates/kaigi-platform-contract/: Cargo.toml
crates/kaigi-platform-contract/src/: lib.rs
crates/kaigi-soranet-client/: Cargo.toml
crates/kaigi-soranet-client/src/: lib.rs
crates/kaigi-wire/: Cargo.toml
crates/kaigi-wire/src/: lib.rs
docs/: av-baseline-profiles.json  client-app-workspaces.json  client-fallback-drill-results.json  client-fallback-drills.json  client-release-manifest-input.template.json  client-release-manifest.json  client-release-readiness-gates.json  client-release-tracks.json  client-rollback-manifest.json  critical-defects.json  ga-approvals.json  hardening-gates.json  hdr-target-device-results.json  hdr-transport-profiles.json  media-capability-profiles.json  parity-matrix.md  parity-status-contract.json  parity-status-waivers.json  parity-waiver-policy.json  platform-blockers.json  platform-contract.json  protocol-vnext.md  release-playbook.md  rollback-playbook.md  screen-share-constraints.json  test-plan.md
docs/fixtures/waivers/: approver-pattern.json  manifest.json  owner-approver-not-distinct.json  owner-pattern.json  reason-too-long.json  short-reason.json  target-status-not-allowed.json  ticket-pattern.json  ttl-too-long.json  valid-control.json
scripts/: execute_parity_waiver_fixtures.py  export_platform_contract_json.sh  generate_client_release_manifest.py  generate_conformance_evidence_index.py  generate_parity_readiness_report.py  generate_release_readiness_report.py  run_av_baseline_smoke.sh  run_client_app_workspaces_smoke.sh  run_client_fallback_drill_results_smoke.sh  run_client_fallback_drills_smoke.sh  run_client_release_manifest_smoke.sh  run_client_release_playbook_alignment_smoke.sh  run_client_release_readiness_gates_smoke.sh  run_client_release_tracks_smoke.sh  run_client_rollback_manifest_smoke.sh  run_client_ui_e2e_smoke.sh  run_conformance_coverage_check.sh  run_conformance_evidence_bundle.sh  run_conformance_evidence_index.sh  run_controlplane_reliability_smoke.sh  run_hardening_ga_smoke.sh  run_hdr_transport_smoke.sh  run_linux_client_smoke.sh  run_m2_exit_criteria_smoke.sh  run_m3_exit_criteria_smoke.sh  run_media_hdr_recording_smoke.sh  run_native_android_smoke.sh  run_native_apple_smoke.sh  run_native_ga_smoke.sh  run_native_ops_handoff_package.sh  run_native_ops_handoff_package_smoke.sh  run_parity_downgrade_guard_smoke.sh  run_parity_ga_smoke.sh  run_parity_readiness_smoke.sh  run_parity_status_smoke.sh  run_parity_waiver_fixture_coverage_smoke.sh  run_parity_waiver_fixture_manifest_smoke.sh  run_parity_waiver_policy_negative_smoke.sh  run_parity_waiver_policy_smoke.sh  run_platform_contract_smoke.sh  (+34 more)
(+33 files in other folders)
