[workspace]
members = [
  "crates/kaigi-cli",
  "crates/kaigi-hub-echo",
  "crates/kaigi-linux-client",
  "crates/kaigi-platform-contract",
  "crates/kaigi-soranet-client",
  "crates/kaigi-wire",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.92"
version = "0.1.0"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
blake3 = "1.8.2"
bytes = "1.10.1"
chacha20poly1305 = { version = "0.10.1", default-features = true }
clap = { version = "4.5.51", features = ["derive"] }
futures-util = "0.3.31"
hex = { version = "0.4.3", default-features = false, features = ["alloc", "std"] }
quinn = "0.11.9"
rand = { version = "0.9.2", default-features = false, features = ["alloc", "os_rng", "std", "std_rng"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23.35", default-features = false, features = ["std"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "io-std", "io-util", "time", "sync"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
