[package]
name = "kaigi-cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
x25519-dalek = { workspace = true }

kaigi-soranet-client = { path = "../kaigi-soranet-client" }
kaigi-wire = { path = "../kaigi-wire" }
norito = { path = "../../../iroha/crates/norito" }
iroha = { path = "../../../iroha/crates/iroha", optional = true }

[features]
default = []
ledger = ["dep:iroha"]
