[package]
name = "kaigi-linux-client"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
gtk-ui = ["dep:gtk4"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
gtk4 = { version = "0.10.2", optional = true }

[dev-dependencies]
serde_json.workspace = true
